pos - list of product

--- a/app/src/main/res/drawable/round_border.xml
+++ b/app/src/main/res/drawable/round_border.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <stroke android:width="2dp"
-        android:color="@color/colorPrimary"
+        android:color="@color/black_hex"
         />
     <corners android:radius="5dp" />
 
