--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <corners android:radius="8dp" />
-    <solid android:color="#FFFFFF"/>
+    <solid android:color="@color/black_hex"/>
     <stroke
         android:width="2dip"
-        android:color="#E9E9E9" />
+        android:color="@color/black_hex" />
     <padding
         android:bottom="4dp"
         android:left="4dp"
