--- a/app/src/main/res/layout/activity_pos.xml
+++ b/app/src/main/res/layout/activity_pos.xml
@@ -1,159 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:background="@color/grey_5">
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:weightSum="2">
+        android:layout_height="0dp"
+        android:layout_weight="4"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center|left"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/img_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:padding="10dp"
-                app:srcCompat="@drawable/ic_back"
-                tools:ignore="VectorDrawableCompat" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="@font/sailec_regular"
-                android:text="@string/pos"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/colorPrimary"
-            android:gravity="center|right"
-            android:orientation="horizontal">
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_gravity="center|right"
-                android:layout_marginTop="2dp"
-                android:layout_marginRight="10dp"
-                android:gravity="center">
-
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center|left"
+                android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/img_cart"
+                    android:id="@+id/img_back"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:foregroundGravity="center"
+                    android:layout_marginLeft="10dp"
                     android:padding="15dp"
-                    android:src="@drawable/ic_shopping_cart" />
+                    app:srcCompat="@drawable/ic_back"
 
+                    tools:ignore="VectorDrawableCompat" />
 
-                <TextView
-                    android:id="@+id/txt_count"
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:layout_marginLeft="25dp"
-                    android:background="@drawable/circle"
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:gravity="center"
-                    android:text="10"
-                    android:textColor="@android:color/holo_red_light"
-                    android:textSize="10sp" />
-            </RelativeLayout>
+                    android:orientation="horizontal"
+                    android:weightSum="2">
+
+                    <EditText
+                        android:id="@+id/etxt_search"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/round_border"
+                        android:ems="10"
+                        android:fontFamily="@font/sailec_regular"
+                        android:hint="@string/search_here"
+                        android:inputType="textPersonName"
+                        android:lines="1"
+                        android:padding="10dp"
+                        android:textColor="@color/black_hex"
+                        android:textColorHint="@color/black_hex" />
+
+                    <ImageView
+                        android:id="@+id/img_scanner"
+                        android:layout_width="100dp"
+                        android:layout_height="40dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/barcode" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center|right"
+                    android:orientation="horizontal">
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|right"
+
+                        android:layout_marginTop="2dp"
+                        android:layout_marginRight="10dp"
+                        android:gravity="center">
+
+
+                        <ImageView
+                            android:id="@+id/img_cart"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:foregroundGravity="center"
+                            android:padding="15dp"
+                            android:src="@drawable/ic_shopping_cart" />
+
+
+                        <TextView
+                            android:id="@+id/txt_count"
+                            android:layout_width="28dp"
+                            android:layout_height="28dp"
+                            android:layout_marginLeft="25dp"
+                            android:background="@drawable/circle"
+                            android:gravity="center"
+                            android:text="10"
+                            android:textColor="@android:color/white"
+                            android:textSize="10sp" />
+                    </RelativeLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:weightSum="2">
-
-        <EditText
-            android:id="@+id/etxt_search"
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmer_view_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:background="@drawable/round_border"
-            android:drawableLeft="@drawable/ic_search"
-            android:ems="10"
-            android:fontFamily="@font/sailec_regular"
-            android:hint="@string/search_here"
-            android:inputType="textPersonName"
-            android:padding="10dp" />
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            android:orientation="vertical"
+            android:visibility="gone"
+            app:shimmer_duration="800"
+            tools:ignore="MissingConstraints">
 
-        <ImageView
-            android:id="@+id/img_scanner"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/barcode" />
-    </LinearLayout>
+            <!-- Adding 7 rows of placeholders -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-    <com.facebook.shimmer.ShimmerFrameLayout
-        android:id="@+id/shimmer_view_container"
-        tools:ignore="MissingConstraints"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        android:orientation="vertical"
-        app:shimmer_duration="800">
+                <include layout="@layout/data_placeholder_layout" />
 
-        <!-- Adding 7 rows of placeholders -->
+                <include layout="@layout/data_placeholder_layout" />
+
+                <include layout="@layout/data_placeholder_layout" />
+
+                <include layout="@layout/data_placeholder_layout" />
+
+                <include layout="@layout/data_placeholder_layout" />
+
+                <include layout="@layout/data_placeholder_layout" />
+
+                <include layout="@layout/data_placeholder_layout" />
+            </LinearLayout>
+
+        </com.facebook.shimmer.ShimmerFrameLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <include layout="@layout/data_placeholder_layout" />
-
-            <include layout="@layout/data_placeholder_layout" />
-
-            <include layout="@layout/data_placeholder_layout" />
-
-            <include layout="@layout/data_placeholder_layout" />
-
-            <include layout="@layout/data_placeholder_layout" />
-
-            <include layout="@layout/data_placeholder_layout" />
-
-            <include layout="@layout/data_placeholder_layout" />
-        </LinearLayout>
-
-    </com.facebook.shimmer.ShimmerFrameLayout>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -166,11 +160,10 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:background="@color/colorPrimary"
                     android:fontFamily="@font/sailec_regular"
                     android:padding="5dp"
                     android:text="@string/product_category"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black_hex"
                     android:textSize="16sp" />
 
                 <com.balysv.materialripple.MaterialRippleLayout
@@ -186,14 +179,13 @@
                         android:layout_marginTop="5dp"
                         android:layout_marginBottom="5dp"
                         android:layout_weight="1"
-                        android:background="@color/colorPrimary"
                         android:fontFamily="@font/sailec_regular"
                         android:gravity="right"
                         android:paddingTop="5dp"
                         android:paddingRight="20dp"
                         android:paddingBottom="5dp"
                         android:text="@string/reset"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black_hex"
                         android:textSize="16sp" />
                 </com.balysv.materialripple.MaterialRippleLayout>
             </LinearLayout>
@@ -210,16 +202,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:background="@color/colorPrimary"
                 android:fontFamily="@font/sailec_regular"
                 android:padding="5dp"
-                android:text="@string/all_product"
-                android:textColor="@color/white"
+                android:text="@string/products"
+                android:textColor="@color/black_hex"
                 android:textSize="16sp" />
 
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler"
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -228,14 +220,17 @@
             </androidx.recyclerview.widget.RecyclerView>
 
             <LinearLayout
+                android:id="@+id/liner_no_products"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                >
 
                 <ImageView
                     android:id="@+id/image_no_product"
                     android:layout_width="150dp"
+                    android:src="@drawable/no_data"
                     android:layout_height="150dp"
                     android:layout_marginTop="50dp" />
 
@@ -249,9 +244,27 @@
                     android:textSize="24sp"
                     app:fontFamily="@font/sailec_regular" />
             </LinearLayout>
+
         </LinearLayout>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:orientation="horizontal">
 
-    </ScrollView>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_add"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            app:backgroundTint="@color/black_hex"
+            app:srcCompat="@drawable/ic_add"
+            tools:ignore="VectorDrawableCompat" />
+
+    </LinearLayout>
 
 </LinearLayout>
