--- a/app/src/main/res/layout/pos_product_item.xml
+++ b/app/src/main/res/layout/pos_product_item.xml
@@ -1,149 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="?android:attr/selectableItemBackground"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:padding="5dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_product"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_margin="2dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="5dp"
+        app:cardPreventCornerOverlap="false"
+        app:contentPadding="5dp">
 
-        <androidx.cardview.widget.CardView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:foreground="?android:attr/selectableItemBackground"
+            android:orientation="vertical">
 
-            android:theme="@style/ThemeOverlay.AppCompat.Light"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="0dp">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_prod_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="5dp"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="10dp"
+                app:cardPreventCornerOverlap="true"
+                app:contentPadding="5dp">
 
+                <ImageView
+                    android:id="@+id/img_product"
+                    android:layout_width="150dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center_vertical|center"
+                    android:padding="5dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/image_placeholder"
+                    app:srcCompat="@drawable/ic_add" />
+            </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp">
-
-                    <ImageView
-                        android:id="@+id/img_product"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="fitXY"
-                        app:srcCompat="@drawable/image_placeholder" />
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <TextView
-                            android:id="@+id/txt_stock_status"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="@color/red"
-                            android:paddingLeft="5dp"
-                            android:paddingRight="3dp"
-                            android:layout_alignParentStart="true"
-                            android:paddingBottom="2dp"
-                            android:text="@string/low_stock"
-                            android:textColor="@color/white"
-                            android:textSize="12sp"
-                            android:visibility="visible" />
-                    </RelativeLayout>
-                </RelativeLayout>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="3"
+                    android:orientation="vertical"
+                    android:weightSum="1">
 
                     <TextView
                         android:id="@+id/txt_product_name"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:maxLines="1"
-                        android:padding="3dp"
+                        android:maxLines="2"
+                        android:minLines="2"
                         android:text="@string/product_name"
-                        android:textSize="16sp"
-                        android:textStyle="bold"
-                        app:fontFamily="@font/sailec_regular" />
+                        android:textColor="@color/black_hex"
+                        android:textSize="14sp"
+                        app:fontFamily="@font/sailec_medium" />
 
                     <TextView
                         android:id="@+id/txt_stock"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:padding="2dp"
-                        android:text="@string/stock"
-                        app:fontFamily="@font/sailec_regular" />
+                        android:text="@string/product_stock"
+                        android:textSize="14sp"
+                        app:fontFamily="@font/sailec_medium" />
 
                     <TextView
                         android:id="@+id/txt_weight"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:padding="2dp"
                         android:text="@string/weight"
-                        app:fontFamily="@font/sailec_regular" />
-
-                    <TextView
-                        android:id="@+id/txt_price"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:padding="2dp"
-                        android:text="@string/price"
-                        android:textColor="@color/colorAccent"
-                        android:textSize="18sp"
-                        app:fontFamily="@font/sailec_regular" />
+                        android:textSize="12sp"
+                        app:fontFamily="@font/sailec_medium" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="vertical">
+                        android:layout_height="wrap_content">
 
                         <TextView
-                            android:id="@+id/txt_tax"
+                            android:id="@+id/txt_price"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="right"
-                            android:text="@string/tax" />
+                            android:padding="2dp"
+                            android:text="@string/price"
+                            android:textColor="@color/black_hex"
+                            android:textSize="14sp"
+                            app:fontFamily="@font/sailec_medium" />
+
 
                     </LinearLayout>
+                    <TextView
+                        android:id="@+id/txt_tax"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="2dp"
+                        android:text="@string/unit"
+                        android:textColor="@color/black_hex"
+                        android:textSize="14sp"
+                        app:fontFamily="@font/sailec_medium" />
 
-                    <com.balysv.materialripple.MaterialRippleLayout
-                        style="@style/RippleStyleWhite"
+
+                    <LinearLayout
+                        android:id="@+id/liner_count"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        android:orientation="horizontal">
 
+                        <ImageView
+                            android:id="@+id/txt_minus"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_weight="1"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_icon_minus" />
 
-                        <Button
-                            android:id="@+id/btn_add_cart"
-                            android:layout_width="match_parent"
+                        <TextView
+                            android:id="@+id/txt_number"
+                            android:layout_width="30dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="2dp"
-                            android:background="@color/colorPrimary"
-                            android:fontFamily="@font/sailec_regular"
-                            android:text="@string/add_to_cart"
-                            android:textColor="#fff"
+                            android:layout_weight="1"
+                            android:maxLines="1"
+                            android:padding="20dp"
+                            android:text="0"
+                            android:textSize="18sp"
                             android:textStyle="bold" />
-                    </com.balysv.materialripple.MaterialRippleLayout>
+
+                        <ImageView
+                            android:id="@+id/txt_plus"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_weight="1"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_pluse_add" />
+                    </LinearLayout>
 
                 </LinearLayout>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
 
-    </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
