--- a/app/src/main/res/layout/product_category_item.xml
+++ b/app/src/main/res/layout/product_category_item.xml
@@ -4,29 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:background="@color/white"
+    android:padding="2dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_category"
-        android:layout_width="180dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginBottom="2dp"
+        android:layout_margin="2dp"
         android:foreground="?android:attr/selectableItemBackground"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="5dp"
-        app:cardElevation="10dp"
         app:cardPreventCornerOverlap="false">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:id="@+id/liner_category_child"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:baselineAligned="false"
             android:gravity="center"
             android:orientation="horizontal"
-            android:padding="5dp">
+            android:padding="8dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -43,6 +41,7 @@
                     android:contentDescription="TODO"
                     android:padding="10dp"
                     android:scaleType="centerCrop"
+                    android:visibility="gone"
                     app:srcCompat="@drawable/category" />
 
                 <TextView
@@ -51,11 +50,10 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sailec_regular"
                     android:paddingLeft="2dp"
-                    android:maxLines="1"
                     android:paddingRight="2dp"
                     android:text="@string/category_name"
                     android:textColor="#000000"
-                    android:textSize="20sp" />
+                    android:textSize="12sp" />
             </LinearLayout>
 
         </LinearLayout>
