--- a/app/src/main/res/layout/customer_item.xml
+++ b/app/src/main/res/layout/customer_item.xml
@@ -87,34 +87,47 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight=".5"
+                android:layout_margin="5dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:gravity="center_horizontal|center_vertical"
                     android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/img_call"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
                         app:srcCompat="@drawable/ic_call"
                         tools:ignore="VectorDrawableCompat" />
 
                     <ImageView
                         android:id="@+id/img_delete"
-                        android:layout_width="50dp"
-                        android:layout_height="30dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
                         android:layout_marginTop="10dp"
                         android:visibility="visible"
                         app:srcCompat="@drawable/ic_delete"
+                        tools:ignore="VectorDrawableCompat" />
+                    <ImageView
+                        android:id="@+id/img_edit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:visibility="visible"
+                        app:srcCompat="@drawable/ic_edit"
                         tools:ignore="VectorDrawableCompat" />
 
                 </LinearLayout>
