--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -86,23 +86,34 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:gravity="right"
+                    android:padding="10dp"
                     android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/img_delete"
                         android:layout_width="50dp"
-                        android:layout_height="30dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="2"
                         android:visibility="visible"
+                        android:padding="5dp"
                         app:srcCompat="@drawable/ic_delete"
+                        tools:ignore="VectorDrawableCompat" />
+                    <ImageView
+                        android:id="@+id/img_edit"
+                        android:layout_width="50dp"
+                        android:layout_height="0dp"
+                        android:visibility="visible"
+                        android:padding="10dp"
+                        android:layout_weight="2"
+                        app:srcCompat="@drawable/ic_edit"
                         tools:ignore="VectorDrawableCompat" />
                 </LinearLayout>
 
