re designed ui android as per given document https://docs.google.com/document/d/1jmc2aXK3Ni7Ofcor3PboLCT_txN2W_-eClAuCL-WfqI/edit

--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <corners android:radius="8dp" />
-    <solid android:color="@color/black_hex"/>
+    <solid android:color="#357DEA"/>
     <stroke
         android:width="2dip"
-        android:color="@color/black_hex" />
+        android:color="#357DEA" />
     <padding
         android:bottom="4dp"
         android:left="4dp"
