--- a/app/src/main/res/drawable/actionbar_gradient.xml
+++ b/app/src/main/res/drawable/actionbar_gradient.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
-    android:useLevel="false" >
-
+    android:useLevel="true" >
     <gradient
         android:angle="360"
-        android:endColor="#81c784"
-        android:startColor="#43a047"
+        android:endColor="@color/white"
+        android:startColor="@color/white"
         android:type="linear" />
 
 </shape>
