--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -33,7 +33,7 @@
                 android:padding="5dp"
                 android:text="ShopN'Cart"
                 android:textAllCaps="true"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/black_hex"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
