--- a/app/src/main/res/layout/activity_add_category.xml
+++ b/app/src/main/res/layout/activity_add_category.xml
@@ -29,7 +29,7 @@
             android:hint="@string/category_name"
             android:inputType="text"
             android:padding="16dp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/bg_skyblue"
             android:textSize="16sp"
             android:importantForAutofill="no" />
 
