--- a/app/src/main/res/layout/activity_add_customers.xml
+++ b/app/src/main/res/layout/activity_add_customers.xml
@@ -35,7 +35,7 @@
                 android:hint="@string/customer_name"
                 android:inputType="text"
                 android:padding="16dp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/black_hex"
                 android:textSize="16dp" />
 
             <TextView
@@ -59,7 +59,7 @@
                 android:hint="@string/customer_cell"
                 android:inputType="phone"
                 android:padding="16dp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/black_hex"
                 android:textSize="16dp" />
 
             <TextView
