--- a/app/src/main/res/layout/activity_pos.xml
+++ b/app/src/main/res/layout/activity_pos.xml
@@ -261,7 +261,7 @@
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:clickable="true"
-            app:backgroundTint="@color/black_hex"
+            app:backgroundTint="@color/bg_skyblue"
             app:srcCompat="@drawable/ic_add"
             tools:ignore="VectorDrawableCompat" />
 
