--- a/app/src/main/res/layout/activity_product_cart.xml
+++ b/app/src/main/res/layout/activity_product_cart.xml
@@ -3,16 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:padding="16dp">
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="5dp"
         android:elevation="10dp"
         android:gravity="center"
         android:orientation="vertical">
@@ -21,11 +17,39 @@
             android:id="@+id/txt_total_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
             android:gravity="right"
             android:text="@string/total_price"
             android:textColor="@color/colorPrimary"
-            android:textSize="24sp"
-            app:fontFamily="@font/sailec_regular" />
+            android:fontFamily="@font/sailec_regular"
+            android:textSize="14sp"
+            />
+
+
+        <TextView
+            android:id="@+id/txt_total_tax"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:gravity="right"
+            android:text="@string/total_tax"
+            android:textColor="@color/colorPrimary"
+            android:textSize="14sp"
+            android:fontFamily="@font/sailec_regular" />
+
+        <TextView
+            android:id="@+id/txt_total_price_with_tax"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:fontFamily="@font/sailec_black"
+            android:gravity="right"
+            android:layout_marginBottom="10dp"
+            android:text="@string/total_price_with_tax"
+            android:textColor="@color/black_hex"
+            android:textSize="18sp" />
 
         <com.balysv.materialripple.MaterialRippleLayout
             style="@style/RippleStyleWhite"
@@ -37,7 +61,7 @@
                 android:id="@+id/btn_submit_order"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
+                android:background="@color/bg_skyblue"
                 android:fontFamily="@font/sailec_regular"
                 android:text="@string/submit_order"
                 android:textColor="@color/white"
@@ -79,6 +103,7 @@
                 android:id="@+id/linear_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="5dp"
                 android:orientation="vertical">
 
                 <androidx.recyclerview.widget.RecyclerView
