--- a/app/src/main/res/layout/cart_product_items.xml
+++ b/app/src/main/res/layout/cart_product_items.xml
@@ -10,40 +10,41 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:foreground="?android:attr/selectableItemBackground"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="5dp"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardPreventCornerOverlap="false"
-        app:cardElevation="10dp">
+        app:cardElevation="10dp"
+        app:cardPreventCornerOverlap="false">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:baselineAligned="false"
+            android:padding="5dp"
             android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
+            <androidx.cardview.widget.CardView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="5dp"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                app:cardCornerRadius="10dp">
 
                 <ImageView
                     android:id="@+id/cart_product_image"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:contentDescription="TODO"
-                    android:scaleType="centerCrop"
+                    android:scaleType="fitXY"
                     app:srcCompat="@drawable/image_placeholder" />
-            </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:layout_weight="1"
+                android:layout_weight="3"
                 android:orientation="vertical"
                 android:paddingLeft="10dp">
 
@@ -51,7 +52,7 @@
                     android:id="@+id/txt_item_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/sailec_regular"
+                    android:fontFamily="@font/sailec_black"
                     android:text="@string/product_name"
                     android:textColor="#000000"
                     android:textSize="16sp" />
@@ -62,8 +63,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sailec_regular"
                     android:padding="2dp"
-                    android:text="1 kg"
-                    android:textColor="#EA1D2C" />
+                    android:text="1 kg" />
 
                 <TextView
                     android:id="@+id/txt_price"
@@ -72,12 +72,14 @@
                     android:fontFamily="@font/sailec_regular"
                     android:padding="2dp"
                     android:text="$96.00"
-                    android:textColor="#EA1D2C" />
+                    android:textColor="@color/bg_skyblue" />
 
                 <TextView
                     android:id="@+id/txt_tax"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/sailec_regular"
+                    android:padding="2dp"
                     android:text="@string/tax" />
 
             </LinearLayout>
@@ -86,7 +88,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginRight="10dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -106,54 +107,36 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:background="@drawable/round_shape"
                     android:gravity="center"
                     android:orientation="horizontal">
 
-                    <TextView
+                    <ImageView
                         android:id="@+id/txt_minus"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
                         android:layout_weight="1"
-                        android:drawableLeft="@drawable/icon_minus"
-
-                        android:paddingLeft="10dp"
-                        android:paddingTop="5dp"
-                        android:paddingRight="10dp"
-                        android:paddingBottom="5dp"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
+                        android:src="@drawable/ic_icon_minus" />
 
                     <TextView
                         android:id="@+id/txt_number"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:paddingLeft="10dp"
-
-                        android:paddingTop="5dp"
-                        android:paddingRight="10dp"
-                        android:paddingBottom="5dp"
-                        android:text="1"
-                        android:textSize="13sp"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="2"
+                        android:gravity="center"
+                        android:minEms="5"
+                        android:text="555"
+                        android:textSize="12sp"
                         android:textStyle="bold" />
 
-                    <TextView
+                    <ImageView
                         android:id="@+id/txt_plus"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
                         android:layout_weight="1"
-                        android:paddingLeft="10dp"
-                        android:paddingTop="5dp"
-                        android:paddingRight="10dp"
-                        android:paddingBottom="5dp"
-                        android:text="+"
-                        android:textColor="#D84315"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
+                        android:src="@drawable/ic_pluse_add" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
