--- a/app/src/main/res/layout/customer_item.xml
+++ b/app/src/main/res/layout/customer_item.xml
@@ -7,13 +7,16 @@
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-
-        app:cardCornerRadius="15dp"
-        android:elevation="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:foreground="?android:attr/selectableItemBackground">
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="10dp"
+        app:contentPadding="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,29 +26,29 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:gravity="center"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:layout_margin="5dp"
-                    android:background="@drawable/circle_shape"
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/cart_product_image"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:contentDescription="TODO"
-                    android:padding="15dp"
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/circle_shape"
                     android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/customer" />
+                    android:src="@drawable/customer"
+                    app:civ_border_color="@color/black_hex"
+                    app:civ_border_overlay="true"
+                    app:civ_border_width="2dp" />
+
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_weight="1"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:layout_weight="3"
                 android:orientation="vertical"
                 android:paddingLeft="10dp">
 
@@ -53,10 +56,10 @@
                     android:id="@+id/txt_customer_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/sailec_regular"
+                    android:fontFamily="@font/sailec_black"
                     android:text="@string/customer_name"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="16sp" />
+                    android:textColor="@color/black_hex"
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/txt_cell"
@@ -72,8 +75,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sailec_regular"
                     android:padding="1dp"
-                    android:text="@string/customer_email"
-                     />
+                    android:text="@string/customer_email" />
 
                 <TextView
                     android:id="@+id/txt_address"
@@ -81,15 +83,16 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sailec_regular"
                     android:padding="1dp"
-                    android:text="@string/customer_address"
-                    />
+                    android:text="@string/customer_address" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_margin="5dp"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -111,18 +114,19 @@
                         android:id="@+id/img_delete"
                         android:layout_width="50dp"
                         android:layout_height="0dp"
-                        android:layout_weight="1"
                         android:layout_marginTop="10dp"
+                        android:layout_weight="1"
                         android:visibility="visible"
                         app:srcCompat="@drawable/ic_delete"
                         tools:ignore="VectorDrawableCompat" />
+
                     <ImageView
                         android:id="@+id/img_edit"
                         android:layout_width="50dp"
                         android:layout_height="0dp"
-                        android:layout_weight="1"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
+                        android:layout_weight="1"
                         android:visibility="visible"
                         app:srcCompat="@drawable/ic_edit"
                         tools:ignore="VectorDrawableCompat" />
