--- a/app/src/main/res/layout/order_details_item.xml
+++ b/app/src/main/res/layout/order_details_item.xml
@@ -21,12 +21,14 @@
             android:baselineAligned="false"
             android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-
+            <androidx.cardview.widget.CardView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="5dp"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                app:cardCornerRadius="10dp">
+
 
                 <ImageView
                     android:id="@+id/img_product"
@@ -36,7 +38,7 @@
                     android:contentDescription="TODO"
                     android:scaleType="centerCrop"
                     app:srcCompat="@drawable/image_placeholder" />
-            </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -50,9 +52,9 @@
                     android:id="@+id/txt_product_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/sailec_regular"
+                    android:fontFamily="@font/sailec_black"
                     android:text="Product Name"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/black_hex"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
@@ -62,8 +64,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sailec_regular"
                     android:padding="2dp"
-                    android:text="Qty"
-                     />
+                    android:text="Qty" />
 
                 <TextView
                     android:id="@+id/txt_weight"
@@ -71,8 +72,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sailec_regular"
                     android:padding="2dp"
-                    android:text="Weight"
-                    />
+                    android:text="Weight" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -85,8 +85,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/sailec_regular"
                         android:padding="2dp"
-                        android:text="@string/price"
-                        />
+                        android:text="@string/price" />
 
                     <TextView
                         android:id="@+id/txt_total_cost"
