--- a/app/src/main/res/layout/payment_method_item.xml
+++ b/app/src/main/res/layout/payment_method_item.xml
@@ -10,10 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        app:cardCornerRadius="15dp"
         android:foreground="?android:attr/selectableItemBackground"
-        app:cardPreventCornerOverlap="false"
-        app:cardElevation="10dp">
+        app:cardCornerRadius="15dp"
+        app:cardElevation="10dp"
+        app:cardPreventCornerOverlap="false">
 
         <LinearLayout
 
@@ -22,23 +22,24 @@
             android:baselineAligned="false"
             android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <androidx.cardview.widget.CardView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="5dp"
                 android:gravity="center"
-                android:layout_gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                app:cardCornerRadius="10dp">
 
                 <ImageView
-                    android:background="@drawable/circle_shape"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:layout_marginLeft="5dp"
+                    android:background="@drawable/circle_shape"
                     android:contentDescription="TODO"
                     android:padding="10dp"
-                    android:layout_margin="5dp"
                     app:srcCompat="@drawable/payment_method" />
-            </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -54,9 +55,9 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sailec_regular"
                     android:text="@string/payment_method"
-                    android:textStyle="bold"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
