--- a/app/src/main/res/layout/pos_product_item.xml
+++ b/app/src/main/res/layout/pos_product_item.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="5dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_product"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:cardPreventCornerOverlap="false"
-        app:contentPadding="5dp">
+        app:contentPadding="5dp"
+
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="10dp"
+        android:background="@color/white"
+        app:cardElevation="2dp"
+        app:cardMaxElevation="2dp"
+        app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,36 +30,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal"
-                android:layout_margin="5dp"
-                android:foreground="?android:attr/selectableItemBackground"
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="10dp"
-                app:cardPreventCornerOverlap="true"
-                app:contentPadding="5dp">
+               >
 
                 <ImageView
                     android:id="@+id/img_product"
-                    android:layout_width="150dp"
+                    android:layout_width="match_parent"
                     android:layout_height="100dp"
+                    android:scaleType="fitXY"
                     android:layout_gravity="center_vertical|center"
-                    android:padding="5dp"
-                    android:scaleType="fitCenter"
                     android:src="@drawable/image_placeholder"
                     app:srcCompat="@drawable/ic_add" />
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
+                android:padding="5dp"
+                android:layout_height="wrap_content">
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="3"
-                    android:orientation="vertical"
-                    android:weightSum="1">
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/txt_product_name"
@@ -67,17 +61,34 @@
                         android:minLines="2"
                         android:text="@string/product_name"
                         android:textColor="@color/black_hex"
-                        android:textSize="14sp"
-                        app:fontFamily="@font/sailec_medium" />
+                        app:fontFamily="@font/sailec_black" />
 
-                    <TextView
-                        android:id="@+id/txt_stock"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="@string/product_stock"
-                        android:textSize="14sp"
-                        app:fontFamily="@font/sailec_medium" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/txt_price"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2"
+                            android:padding="2dp"
+                            android:text="@string/price"
+                            android:textColor="@color/black_hex"
+                            android:textSize="14sp"
+                            app:fontFamily="@font/sailec_medium" />
+
+                        <TextView
+                            android:id="@+id/txt_stock"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2"
+                            android:gravity="end"
+                            android:text="@string/product_stock"
+                            android:textSize="14sp"
+                            app:fontFamily="@font/sailec_medium" />
+
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/txt_weight"
@@ -89,22 +100,6 @@
                         android:textSize="12sp"
                         app:fontFamily="@font/sailec_medium" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:id="@+id/txt_price"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="2dp"
-                            android:text="@string/price"
-                            android:textColor="@color/black_hex"
-                            android:textSize="14sp"
-                            app:fontFamily="@font/sailec_medium" />
-
-
-                    </LinearLayout>
                     <TextView
                         android:id="@+id/txt_tax"
                         android:layout_width="wrap_content"
@@ -121,33 +116,34 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:clickable="true"
+                        android:padding="4dp"
                         android:orientation="horizontal">
 
                         <ImageView
                             android:id="@+id/txt_minus"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:layout_weight="1"
                             android:layout_gravity="center"
+                            android:layout_weight="1"
                             android:src="@drawable/ic_icon_minus" />
 
                         <TextView
                             android:id="@+id/txt_number"
                             android:layout_width="30dp"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:maxLines="1"
-                            android:padding="20dp"
                             android:text="0"
-                            android:textSize="18sp"
+                            android:gravity="center"
+                            android:textSize="14sp"
                             android:textStyle="bold" />
 
                         <ImageView
                             android:id="@+id/txt_plus"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:layout_weight="1"
                             android:layout_gravity="center"
+                            android:layout_weight="1"
                             android:src="@drawable/ic_pluse_add" />
                     </LinearLayout>
 
