--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -10,10 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        app:cardCornerRadius="15dp"
         android:foreground="?android:attr/selectableItemBackground"
-        app:cardPreventCornerOverlap="false"
-        app:cardElevation="10dp">
+        app:cardCornerRadius="15dp"
+        app:cardElevation="10dp"
+        app:cardPreventCornerOverlap="false">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,22 +21,24 @@
             android:baselineAligned="false"
             android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+            <androidx.cardview.widget.CardView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="5dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                app:cardCornerRadius="10dp">
 
                 <ImageView
-                    android:background="@color/white"
                     android:id="@+id/product_image"
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:background="@color/white"
                     android:contentDescription="TODO"
                     android:scaleType="centerCrop"
                     app:srcCompat="@drawable/image_placeholder" />
-            </LinearLayout>
-
+            </androidx.cardview.widget.CardView>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -49,7 +51,7 @@
                     android:id="@+id/txt_product_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/sailec_regular"
+                    android:fontFamily="@font/sailec_black"
                     android:text="Product Name"
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp" />
@@ -61,7 +63,7 @@
                     android:fontFamily="@font/sailec_regular"
                     android:padding="2dp"
                     android:text="Product Supplier"
-                    />
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/txt_product_buy_price"
@@ -69,7 +71,8 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sailec_regular"
                     android:padding="2dp"
-                    android:text="@string/product_buy_price" />
+                    android:text="@string/product_buy_price"
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/txt_product_sell_price"
@@ -78,7 +81,7 @@
                     android:fontFamily="@font/sailec_regular"
                     android:padding="2dp"
                     android:text="Sell Price"
-                    />
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
@@ -94,25 +97,26 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:gravity="right"
-                    android:padding="10dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:padding="10dp">
 
                     <ImageView
                         android:id="@+id/img_delete"
                         android:layout_width="50dp"
                         android:layout_height="0dp"
                         android:layout_weight="2"
-                        android:visibility="visible"
                         android:padding="5dp"
+                        android:visibility="visible"
                         app:srcCompat="@drawable/ic_delete"
                         tools:ignore="VectorDrawableCompat" />
+
                     <ImageView
                         android:id="@+id/img_edit"
                         android:layout_width="50dp"
                         android:layout_height="0dp"
-                        android:visibility="visible"
-                        android:padding="10dp"
                         android:layout_weight="2"
+                        android:padding="10dp"
+                        android:visibility="visible"
                         app:srcCompat="@drawable/ic_edit"
                         tools:ignore="VectorDrawableCompat" />
                 </LinearLayout>
