--- a/app/src/main/res/layout/supplier_item.xml
+++ b/app/src/main/res/layout/supplier_item.xml
@@ -7,13 +7,16 @@
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        app:cardCornerRadius="15dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
         android:foreground="?android:attr/selectableItemBackground"
-        app:cardElevation="10dp">
+        app:cardCornerRadius="15dp"
+        app:cardElevation="10dp"
+        app:contentPadding="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,29 +26,28 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:background="@drawable/circle_shape"
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/cart_product_image"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:layout_margin="5dp"
-                    android:contentDescription="TODO"
-                    android:padding="15dp"
+                    android:layout_width="90dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/circle_shape"
                     android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/supplier" />
+                    android:src="@drawable/supplier"
+                    app:civ_border_color="@color/black_hex"
+                    app:civ_border_overlay="true"
+                    app:civ_border_width="2dp" />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:layout_weight="1"
+                android:layout_weight="3"
                 android:orientation="vertical"
                 android:paddingLeft="10dp">
 
@@ -53,7 +55,7 @@
                     android:id="@+id/txt_supplier_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/sailec_regular"
+                    android:fontFamily="@font/sailec_black"
                     android:text="@string/supplier_name"
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp" />
@@ -64,8 +66,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sailec_regular"
                     android:padding="2dp"
-                    android:text="Contact Person"
-                   />
+                    android:text="Contact Person" />
 
                 <TextView
                     android:id="@+id/txt_supplier_cell"
@@ -123,6 +124,7 @@
                         android:visibility="visible"
                         app:srcCompat="@drawable/ic_delete"
                         tools:ignore="VectorDrawableCompat" />
+
                     <ImageView
                         android:id="@+id/img_edit"
                         android:layout_width="wrap_content"
