--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,10 +3,13 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">#FFFFFF</item>
+        <item name="colorAccent">@color/bg_skyblue</item>
         <item name="android:windowContentOverlay">@null</item>
+        <item name="titleTextColor">@color/black_hex</item>
+        <item name="elevation">10dp</item>
+        <item name="android:homeAsUpIndicator">@drawable/back</item>
+        <item name="android:shadowColor">@color/grey</item>
     </style>
 
     <style name="RippleStyleWhite">
